# fearth-cocos-gdk

./: .gitignore  README.md  build_android.bat  install_android.bat  package.json
assets/fearthgdk/scripts/: FearthGdk.ts
assets/fearthgdk/scripts/data/: FearthGdkConfig.ts
assets/fearthgdk/scripts/defines/: FearthErrorCode.ts  FearthEvent.ts
assets/fearthgdk/scripts/interfaces/: FearthGdkAndroid.ts  FearthGdkIOS.ts  FearthGdkNative.ts  FearthGdkWeb.ts  IFearthGdk.ts
assets/fearthgdk/scripts/utils/: FearthUtils.ts
assets/scenes/: Sample.scene  Start.scene
assets/scripts/: FearthGdkTest.ts
build-config/: android.json
native/engine/android/: CMakeLists.txt  build.gradle
native/engine/android/app/: build.gradle  proguard-rules.pro
native/engine/android/app/libs/: gdk-2.0.0.aar
native/engine/android/app/src/com/fearth/gdk/: FearthGdkWrapper.java
native/engine/ios/: CMakeLists.txt
native/engine/ios/fearthgdk/frameworks/FearthGdk.framework/: FearthGdk  Info.plist
native/engine/ios/fearthgdk/frameworks/FearthGdk.framework/_CodeSignature/: CodeResources
native/engine/ios/fearthgdk/src/: FearthGdkWrapper.h  FearthGdkWrapper.mm
